--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 20px;
-  font-family: "Poppins";
+  font-family: 'Poppins';
   background: var(--secondary);
 }
 * {
@@ -27,21 +27,37 @@ button {
 }
 
 /* navbar */
+header nav {
+  display: flex;
+  gap: 16px;
+  justify-content: end;
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
+header nav h1 {
+  margin-right: auto;
+  border-bottom: 3px solid var(--primary);
+}
+
+header nav a {
+  text-decoration: none;
+  padding: 6px;
+  border-radius: 4px;
+}
+
+header nav a.active {
+  background-color: var(--primary);
+}
 
 /* page content */
 
-
 /* help layout */
-
 
 /* faq */
 
-
 /* careers list */
 
-
 /* careers details */
-
 
 /* breadcrumbs */
